fixing side nav bar overlap issue

--- a/style.css
+++ b/style.css
@@ -2,13 +2,32 @@
     --windows95: rgb(1, 130, 129);
 }
 
+* {
+    margin: 0;
+    padding: 0;
+}
+
 body {
     display: flex;
     flex-direction: column;
-    height: 100vh; 
     padding-top: 5rem;
-    align-items: center;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+/* Main Container */
+
+.mainContainer {
+    display: grid;
+    justify-items: center;
+    grid-template-columns: 4rem 1fr 4rem;
+}
+
+/* side bar divs */
+
+.rightSideBar,
+.leftSideBar {
+    height: 100%;
+    width: 4rem;
 }
 
 /* Side nav bar */
@@ -112,9 +131,6 @@ nav {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(0, 23.5rem));
     justify-content: center;
-    width: 80vw;
-    margin: 0;
-    padding: 0;
     max-width: 1500px;
     gap: 2rem;
 }
@@ -132,6 +148,7 @@ nav {
     border-radius: 3%;
     position: relative;
     box-shadow: 0.05rem 0.05rem 0.05rem var(--windows95);
+    min-width: 470px;
 }
 
 /* Project Image */
